--- a/src/views/upload.ejs
+++ b/src/views/upload.ejs
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       form {
+        display: flex;
+        flex-direction: column;
+      }
+      form,
+      h1 {
         margin-left: 40px;
         margin-top: 40px;
       }
@@ -19,11 +24,9 @@
     </style>
   </head>
   <body>
-    <form action="/uploadImage" method="POST" enctype="multipart/form-data">
-      <div>
-        <h1>Upload Image</h1>
-        <input type="file" name="image" required />
-      </div>
+    <h1>Upload Image</h1>
+    <form action="/uploadImage" method="post" enctype="multipart/form-data">
+      <input type="file" name="image" accept="image/*" required />
       <button type="submit">Upload Image</button>
     </form>
   </body>
